--- a/scores.html
+++ b/scores.html
@@ -11,11 +11,11 @@
     <body>
         <section class="highscores">
             <h1>Highscores</h1>
-            <ol class="highscoresOl"></ol>
+            <ol class="highscoresOl" id="highscoresOl"></ol>
             <a href="index.html">
                 <button class="button">Go Back</button>
             </a>
-            <button class="button">Clear Scores</button>
+            <button class="button" id="clearButton">Clear Scores</button>
         </section>
     </body>
     </html>
